Move connect button to settings panel. dictionary output for eta.run. ` Macro (Literal Replace for Variables)

--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -45,7 +45,6 @@
         <a href="#" class="menu-link" id="btn_load_exp">Open</a>
         <a href="#" class="menu-link" id="btn_save_exp">Save As</a>
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
-        <a href="#" class="menu-link" id="btn_connect">Connect</a>
         <a href="#" class="menu-link" id="btn_compile">VI Checking</a>
         <a href="https://timetag.github.io/ETA-Hub" class="menu-link"  target="_blank" >Help</a>
     </div>
@@ -228,7 +227,7 @@
 
                     </div>
                      <div class="modal-footer">
-                        <button type="submit" class="btn btn-outline-dark" id="btn_connect_dialog">Connect</button>
+                        <button type="submit" class="btn btn-outline-dark" id="btn_connect">Connect</button>
                     </div>
                 
             </div>
