--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -21,6 +21,7 @@
             module = undefined;
         }
     </script>
+    <script src='js/lib/reconnecting-websocket.min.js'></script>
     <script src='js/lib/jquery.min.js'></script>
     <!-- Helper libraries -->
     <script src="js/lib/bootstrap.min.js"></script>
