--- a/gui/src/renderer/processing.html
+++ b/gui/src/renderer/processing.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="shortcut icon" href="favicon.ico" />
       <link rel="stylesheet" type="text/css" href="css/index.css">
+      <link rel="stylesheet" type="text/css" href="css/main.css">
       <link href="css/fontawesome/css/fontawesome-all.min.css" rel="stylesheet">
       <link rel="stylesheet" href="css/table.css">
       <!--[if lt IE 9]>
