--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -12,9 +12,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/table.css">
+    <link rel="stylesheet" type="text/css" href="css/frame.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+
     <script>
         if (typeof module === 'object') {
             window.module = module;
