--- a/gui/src/renderer/processing.html
+++ b/gui/src/renderer/processing.html
@@ -48,7 +48,7 @@
     <div class="ui-layout-north" >
         <div id="top_panel">
             <span class="caption" id="main_caption">ETA</span>
-            <a href="https://timetag.github.io/Post-processing" class="menu-link"  target="_blank" >Help</a>
+            <a href="https://eta.readthedocs.io/en/latest/python.html" class="menu-link"  target="_blank" >Help</a>
             <a href="#" class="menu-link" id="btn_exit">Exit</a>
         </div>
     </div>
