browse the files

--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -150,7 +150,7 @@
                     <button id="add-dpp" class="btn btn-outline-dark  save_trig_click"> <i class="inst_name dppicon"></i>  Display Panel</button>
                 </div>
                 <div class="px-2">
-                    <button id="add-var" class="btn btn-outline-dark save_trig_click"> <i class="inst_name varicon"></i> Variable</button>
+                    <button id="add-var" class="btn btn-outline-dark save_trig_click"> <i class="inst_name varicon"></i> Parameter</button>
                 </div>
             </div>
     </div>
