--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -45,6 +45,7 @@
 <body id="body">
     <div id="top_panel">
         <span class="caption">ETA</span>
+        <a href="#" class="menu-link" id="btn_new_exp">New</a>
         <a href="#" class="menu-link" id="btn_load_exp">Open</a>
         <a href="#" class="menu-link" id="btn_save_exp">Save As</a>
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
@@ -236,6 +237,7 @@
             </div>
         </div>
     </div>
+    <script src="js/default_new.js"></script>
     <script src="js/index.js"></script>
 </body>
 
