--- a/gui/src/renderer/design.html
+++ b/gui/src/renderer/design.html
@@ -288,7 +288,7 @@
                     <div class="row" style="padding-top: 1rem;">
                         <div class="col-sm-4">
                             <div class="card">
-                                <img class="card-img-top" src="img/integer.png">
+                                <img class="card-img-top" src="img/integer.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title"><a href="#" id="btn_create_integer">INTEGER</a></h5>
                                     <p class="card-text">Integer is a fast stroage for scalar that supports up to 64 unsigned bits.</p>
