--- a/gui/src/renderer/help.html
+++ b/gui/src/renderer/help.html
@@ -56,10 +56,10 @@
             <div class="row">
                     <div class="col-sm-4">
                         <div class="card">
-                            <img class="card-img-top gif" src="img/draw_blob.png">
+                            <img class="card-img-top gif" src="img/draw_name.png">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#" id="btn_create_graph">TRANSITION</a></h5>
-                                <p class="card-text">Draw the transition graph on the right side of the window.</p>
+                                <h5 class="card-title"><a href="#" id="btn_create_graph">DRAW</a></h5>
+                                <p class="card-text">Model the experiment outcome with the transition graph on the right panel.</p>
 
                             </div>
                         </div>
@@ -68,8 +68,8 @@
                     <div class="card">
                         <img class="card-img-top gif" src="img/draw_trigger.png">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="#" id="btn_create_act">ACTION</a></h5>
-                            <p class="card-text">Action allow you to perform analytical functions or emit signals on any event trigger.</p>
+                            <h5 class="card-title"><a href="#" id="btn_create_act">CODE</a></h5>
+                            <p class="card-text">Perform analytical instruction or emit signals on any event trigger.</p>
                         </div>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
                         <div class="card">
                             <img class="card-img-top gif" src="img/shortcuts.jpg">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#" id="btn_create_shortcuts">SHORTCUTS</a></h5>
-                                <p class="card-text">A combination of keystrokes that provides easier access to a command or operation.</p>
+                                <h5 class="card-title"><a href="https://eta.readthedocs.io/en/latest/recipes.html"   target="_blank">RECIPES</a></h5>
+                                <p class="card-text">Examples and tutorial.</p>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,12 @@
             </div>
         </div>
     </div>
-  <div class="modal fade" id="graphModal" tabindex="-1" role="dialog">
+
+
+
+
+
+    <div class="modal fade" id="graphModal" tabindex="-1" role="dialog">
         <div class="modal-dialog " style="max-width: 80%" role="document">
             <div class="modal-content">
                 <div class="modal-header">
