--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -253,7 +253,7 @@
                 <form id="create_new_form">
                     <div class="modal-body">
                         <h5>What do you want to start with?</h5>
-                        <h>Save the current recipe before continue.</h>
+                        <h>Save the current file before continue.</h>
                         <div class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="marker_counter.eta" checked /><label  class="custom-control-label" for="radio1">Count Markers</label>
                         </div>
@@ -264,7 +264,7 @@
                             <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="correlation.eta" /><label class="custom-control-label" for="radio3">Correlations</label>
                         </div>
                         <div class="custom-control custom-radio">
-                                <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="realtime_improved.eta" /><label class="custom-control-label" for="radio3">Real-Time Analysis</label>
+                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime_improved.eta" /><label class="custom-control-label" for="radio4">Real-Time Analysis</label>
                         </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
                         
