--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -255,19 +255,24 @@
                         <h5>What do you want to start with?</h5>
                         <h>Save the current file before continue.</h>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="marker_counter.eta" checked /><label  class="custom-control-label" for="radio1">Count Markers</label>
+                            <input class="custom-control-input" type="radio" id="radio0" name="recipe" value="unnamed" checked /><label  class="custom-control-label" for="radio0">Blank</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="hist2d.eta" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
+                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="countrate" checked /><label  class="custom-control-label" for="radio1">Count Rate</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="correlation.eta" /><label class="custom-control-label" for="radio3">Correlations</label>
+                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="correlation" /><label class="custom-control-label" for="radio3">Correlations</label>
                         </div>
                         <div class="custom-control custom-radio">
-                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime_improved.eta" /><label class="custom-control-label" for="radio4">Real-Time Analysis</label>
+                            <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="two-time_correlation" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
+                        </div>
+                        <div class="custom-control custom-radio">
+                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime" /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
+                        </div>
+                        <div class="custom-control custom-radio">
+                            <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="simple_lifetime" /><label class="custom-control-label" for="radio5">Simple Lifetime Measurement</label>
                         </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
-                        
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-outline-dark" id="btn_create_new">Create</button>
