--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="px-2">
                 <button id="add-dpp" class="btn btn-outline-dark  save_trig_click">
-                    <i class="inst_name dppicon"></i> Display Panel</button>
+                    <i class="inst_name dppicon"></i> Script Panel</button>
             </div>
             <div class="px-2">
                 <button id="add-var" class="btn btn-outline-dark save_trig_click">
