--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -255,10 +255,10 @@
                         <h5>What do you want to start with?</h5>
                         <h>Save the current file before continue.</h>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio0" name="recipe" value="unnamed" checked /><label  class="custom-control-label" for="radio0">Blank</label>
+                            <input class="custom-control-input" type="radio" id="radio0" name="recipe" value="unnamed"  /><label  class="custom-control-label" for="radio0">Blank</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="countrate" checked /><label  class="custom-control-label" for="radio1">Count Rate</label>
+                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="countrate"  /><label  class="custom-control-label" for="radio1">Count Rate</label>
                         </div>
                         <div class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="correlation" /><label class="custom-control-label" for="radio3">Correlations</label>
@@ -267,7 +267,7 @@
                             <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="two-time_correlation" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
-                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime" /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
+                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime" checked /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="simple_lifetime" /><label class="custom-control-label" for="radio5">Simple Lifetime Measurement</label>
