--- a/gui/src/renderer/help.html
+++ b/gui/src/renderer/help.html
@@ -175,7 +175,7 @@
                             <div class="card">
                                 <img class="card-img-top gif" src="img/draw_blob.png">
                                 <div class="card-body">
-                                    <p class="card-text">Draw the cricles for transition graph.</p>
+                                    <p class="card-text">Draw the circles for transition graph.</p>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                             <div class="card">
                                 <img class="card-img-top gif" src="img/draw_init.png">
                                 <div class="card-body">
-                                    <p class="card-text">Set one cricle as the initial cricle exclusively.</p>
+                                    <p class="card-text">Set one circle as the initial circle exclusively.</p>
                                 </div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                             <div class="card">
                                 <img class="card-img-top gif" src="img/draw_name.png">
                                 <div class="card-body">
-                                    <p class="card-text">Edit the symbol for cricles or conditions for arrows.</p>
+                                    <p class="card-text">Edit the symbol for circles or conditions for arrows.</p>
 
                                 </div>
                             </div>
@@ -213,7 +213,7 @@
                             <div class="card">
                                 <img class="card-img-top gif" src="img/draw_trigger.png">
                                 <div class="card-body">
-                                    <p class="card-text">Create triggers on cricles or arrows.</p>
+                                    <p class="card-text">Create triggers on circles or arrows.</p>
                                 </div>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                             <div class="card">
                                  <img class="card-img-top gif" src="img/draw_del.png">
                                 <div class="card-body">
-                                    <p class="card-text">Delete cricles or arrows.</p>
+                                    <p class="card-text">Delete circles or arrows.</p>
                                 </div>
                             </div>
                         </div>
