--- a/gui/src/renderer/design.html
+++ b/gui/src/renderer/design.html
@@ -291,7 +291,7 @@
                                 <img class="card-img-top" src="img/integer.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title"><a href="#" id="btn_create_integer">INTEGER</a></h5>
-                                    <p class="card-text">Integer is a fast stroage for scalar that supports up to 64-bits.</p>
+                                    <p class="card-text">Integer is a fast storage for scalar that supports up to 64-bits.</p>
                                 </div>
                             </div>
                         </div>
@@ -300,7 +300,7 @@
                                 <img class="card-img-top" src="img/table.jpg">
                                 <div class="card-body">
                                     <h5 class="card-title"><a href="#" id="btn_create_table">TABLE</a></h5>
-                                    <p class="card-text">Table is a general integer stroage for vectors, matrix, or tensors.</p>
+                                    <p class="card-text">Table is a general integer storage for vectors, matrix, or tensors.</p>
                                 </div>
                             </div>
                         </div>
