--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -50,7 +50,7 @@
         <a href="#" class="menu-link" id="btn_save_exp">Save As</a>
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
         <a href="#" class="menu-link" id="btn_compile">VI Checking</a>
-        <a href="https://eta.readthedocs.io/en/latest/workflow.html" class="menu-link" target="_blank">Help</a>
+        <a href="help.html" class="menu-link"  target="_blank" >Help</a>
     </div>
     <div id="svg_container">
         <h2 id="exp_tilte" class="bd-text-purple-bright">Experiment Setup</h2>
