better user expericence for the running indicator

--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -228,7 +228,7 @@
 
                     <label for="ws">ETA Backend URL</label>
 
-                    <input id="ws" class="form-control " type="url" value="ws://host[:port]" required>
+                    <input id="ws" class="form-control " type="url" value="ws://localhost:5678" required>
                     <div class="invalid-feedback">
                         Connection to ETA backend is lost.
                     </div>
@@ -258,19 +258,19 @@
                             <input class="custom-control-input" type="radio" id="radio0" name="recipe" value="unnamed"  /><label  class="custom-control-label" for="radio0">Blank</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="countrate"  /><label  class="custom-control-label" for="radio1">Count Rate</label>
+                            <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="Countrate"  /><label  class="custom-control-label" for="radio1">Count Rate</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="correlation" /><label class="custom-control-label" for="radio3">Correlations</label>
+                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="Correlation" /><label class="custom-control-label" for="radio3">Correlations</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="two-time_correlation" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
+                            <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="Two-Time_Correlation" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
-                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="realtime" checked /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
+                                <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="Realtime" checked /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="simple_lifetime" /><label class="custom-control-label" for="radio5">Simple Lifetime Measurement</label>
+                            <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="Simple_Lifetime" /><label class="custom-control-label" for="radio5">Simple Lifetime Measurement</label>
                         </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
                     </div>
