--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -270,7 +270,7 @@
                                 <input class="custom-control-input" type="radio" id="radio4" name="recipe" value="Realtime" checked /><label class="custom-control-label" for="radio4">Real-Time Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="Simple_Lifetime" /><label class="custom-control-label" for="radio5">Simple Lifetime Measurement</label>
+                            <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="Lifetime" /><label class="custom-control-label" for="radio5">Lifetime Measurement</label>
                         </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
                     </div>
