--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -261,7 +261,7 @@
                             <input class="custom-control-input" type="radio" id="radio1" name="recipe" value="Countrate"  /><label  class="custom-control-label" for="radio1">Count Rate</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="Correlation" /><label class="custom-control-label" for="radio3">Correlations</label>
+                            <input class="custom-control-input" type="radio" id="radio3" name="recipe" value="Correlation" /><label class="custom-control-label" for="radio3">Correlation</label>
                         </div>
                         <div class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" id="radio2" name="recipe" value="Two-Time_Correlation" /><label  class="custom-control-label" for="radio2">Two-time Correlation</label>
