Revert "GUI change for RFILE and VFILE"
This reverts commit 2c91f940cfa59c6d09a149b48ea6f5a7ab0b3d84.

--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -147,6 +147,10 @@
                     <i class="inst_name viicon"></i> Virtual Instrument</button>
             </div>
             <div class="px-2">
+                <button id="add-ri" class="btn btn-outline-dark save_trig_click">
+                    <i class="inst_name riicon"></i> Acquisition Device</button>
+            </div>
+            <div class="px-2">
                 <button id="add-dpp" class="btn btn-outline-dark  save_trig_click">
                     <i class="inst_name dppicon"></i> Script Panel</button>
             </div>
