--- a/gui/src/renderer/processing.html
+++ b/gui/src/renderer/processing.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset='utf-8'>
-      <meta http-equiv="X-UA-Compatible" content="chrome=1">
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <link rel="shortcut icon" href="favicon.ico" />
-      
-      <link rel="stylesheet" type="text/css" href="css/code.css">
-      <link rel="stylesheet" type="text/css" href="css/frame.css">
-      <link rel="stylesheet" type="text/css" href="css/layout.css">
-      <link rel="stylesheet" type="text/css" href="css/processing.css">
-      <!--[if lt IE 9]>
+
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="favicon.ico" />
+
+    <link rel="stylesheet" type="text/css" href="css/code.css">
+    <link rel="stylesheet" type="text/css" href="css/frame.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/processing.css">
+    <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <script>
-         if (typeof module === 'object') {
-             window.module = module;
-             module = undefined;
-         }
-      </script>
-      <script src='js/lib/jquery.min.js'></script>
-      <!-- Helper libraries -->
-      <script src="js/lib/d3.min.js"></script>
-      <!-- SaveAs -->
-      <script src="js/lib/Blob.js"></script>
-      <script src="js/lib/FileSaver.min.js"></script>
-      <!-- Local storage -->
-      <script src="js/jsondrop.js"></script>
-      <script src="js/lib/jstorage.js"></script>
-      <script src="js/helper.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script src='js/lib/jquery.min.js'></script>
+    <!-- Helper libraries -->
+    <script src="js/lib/d3.min.js"></script>
+    <!-- SaveAs -->
+    <script src="js/lib/Blob.js"></script>
+    <script src="js/lib/FileSaver.min.js"></script>
 
-      <!-- jas.editor -->
-      <script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-      <script src="js/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
-       <!-- Layout system -->
-        <script type="text/javascript" src="js/lib/jquery-ui-latest.js"></script>
-        <script type="text/javascript" src="js/lib/jquery.layout-1.3.0.rc30.80.js"></script>
+    <!-- Resize detection -->
+    <script src="js/lib/ResizeSensor/ResizeSensor.js"></script>
+    <script src="js/lib/ResizeSensor/ElementQueries.js"></script>
 
-      <script>
-         if (window.module) module = window.module;
-      </script>
-      <title>Display Panel Code</title>
-   </head>
-   <body id="body">
+    <!-- Local storage -->
+    <script src="js/jsondrop.js"></script>
+    <script src="js/lib/jstorage.js"></script>
+    <script src="js/helper.js"></script>
+
+    <!-- jas.editor -->
+    <script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
+    <!-- Layout system -->
+    <script type="text/javascript" src="js/lib/jquery-ui-latest.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.layout-1.3.0.rc30.80.js"></script>
+
+    <script>
+        if (window.module) module = window.module;
+    </script>
+    <title>Display Panel Code</title>
+</head>
+
+<body id="body">
     <script type="text/javascript" src="js/layout.js"></script>
-    <div class="ui-layout-north" >
+    <div class="ui-layout-north">
         <div id="top_panel">
             <span class="caption" id="main_caption">ETA</span>
-            <a href="https://eta.readthedocs.io/en/latest/python.html" class="menu-link"  target="_blank" >Help</a>
+            <a href="https://eta.readthedocs.io/en/latest/python.html" class="menu-link" target="_blank">Help</a>
             <a href="#" class="menu-link" id="btn_exit">Exit</a>
         </div>
     </div>
-    <div class="ui-layout-center"  id="svg_container">
+    <div class="ui-layout-center" id="svg_container">
         <div id="acecode" class="h-100 w-100"></div>
     </div>
     <!-- application main script -->
     <script src="js/processing.js"></script>
-   </body>
+</body>
+
 </html>
