--- a/gui/src/renderer/help.html
+++ b/gui/src/renderer/help.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card">
-                        <img class="card-img-top gif" src="img/coincidence.jpg">
+                        <img class="card-img-top gif" src="img/coincidence.png">
                         <div class="card-body">
                             <h5 class="card-title"><a href="#" id="btn_create_act">TUTORIAL: USING BUILTIN RECIPES</a></h5>
                             <p class="card-text">A tutorial for running a correlational analysis with two detectors in real-time.
@@ -70,7 +70,7 @@
                 
                 <div class="col-sm-4">
                     <div class="card">
-                        <img class="card-img-top gif" src="img/shortcuts.jpg">
+                        <img class="card-img-top gif" src="img/shortcuts.png">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://eta.readthedocs.io/en/latest/workflow.html" target="_blank">TUTORIAL: MAKING RECIPES</a></h5>
                             <p class="card-text">Learn more about how to create an ETA recipe for your experiment.</p>
